<resources>
    <string name="app_name">My Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">Hello explore your dream food</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="daily_meal">Daily Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="s_b_m">S B M</string>
    <string name="sbm_overlord_gmail_com">sbm.overlord@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="search_your_food">Search your Food!</string>
    <string name="hello_sbm">Hello SBM</string>
    <string name="what_do_you_want">What do you want?</string>
    <string name="pizza">Pizza</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="dinner">Dinner</string>
    <string name="description_of_dishes">Description of dishes</string>
    <string name="description">Description</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="_10_weekend_delicious_ndinner_recipes">10 weekend Delicious \nDinner Recipes</string>
    <string name="view_more">view more</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here!</string>
</resources>