<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detailed_img"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:src="@drawable/coffe"
            android:scaleType="centerCrop"
            app:riv_corner_radius="24dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="4dp">

            <TextView
                android:id="@+id/detailed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amarante"
                android:text="@string/cappuccino"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:maxLines="1"
                android:singleLine="true"
                />

            <TextView
                android:id="@+id/detailed_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amarante"
                android:text="@string/description"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:singleLine="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/start"
                    android:layout_marginTop="2dp"/>
                <TextView
                    android:id="@+id/detailed_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_0"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/baseline_access_time_filled_24"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="2dp" />
                <TextView
                    android:id="@+id/detailed_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/_10_00_23_00"
                    android:textStyle="bold"/>
            </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/dollarsymbol"
                app:tint="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="@id/detailed_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/detailed_price" />
            <TextView
                android:id="@+id/detailed_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120.0"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="parent"/>
            
            <Button
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="Add To Cart"
                android:textAllCaps="false"
                android:textSize="10sp"
                android:textStyle="bold"
                android:fontFamily="@font/amarante"
                android:layout_marginRight="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>